--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "4.15.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
@@ -19,10 +21,13 @@
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.6",
     "lucide-react": "^0.244.0",
+    "nanoid": "^4.0.2",
     "next": "13.4.6",
+    "next-auth": "^4.22.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "server-only": "^0.0.1",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.6",
@@ -30,6 +35,7 @@
   },
   "devDependencies": {
     "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.3.0"
+    "prettier-plugin-tailwindcss": "^0.3.0",
+    "prisma": "^4.15.0"
   }
 }
