--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "4.15.0",
+    "@radix-ui/react-alert-dialog": "^1.0.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
