--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "4.15.0",
     "@radix-ui/react-alert-dialog": "^1.0.4",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.4",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
@@ -21,6 +22,7 @@
     "clsx": "^1.2.1",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.6",
+    "jotai": "^2.2.1",
     "lucide-react": "^0.244.0",
     "nanoid": "^4.0.2",
     "next": "13.4.6",
