--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.6",
     "jotai": "^2.2.1",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.244.0",
     "nanoid": "^4.0.2",
     "next": "13.4.6",
@@ -42,6 +43,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.3",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "prisma": "^4.15.0"
