--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "4.15.0",
     "@radix-ui/react-alert-dialog": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.4",
     "@types/node": "20.3.1",
@@ -40,6 +41,7 @@
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.3",
+    "use-sound": "^4.0.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
